// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle fetch_more_posts_FAILURE action 1`] = `
Array [
  Object {
    "type": "fetch_more_posts_REQUEST",
  },
  Object {
    "error": "Ops! We have some internal error :)",
    "type": "fetch_more_posts_FAILURE",
  },
]
`;

exports[`should handle fetch_more_posts_SUCCESS action 1`] = `
Array [
  Object {
    "type": "fetch_more_posts_REQUEST",
  },
  Object {
    "data": undefined,
    "type": "fetch_more_posts_SUCCESS",
  },
]
`;

exports[`should handle fetch_posts_FAILURE action 1`] = `
Array [
  Object {
    "type": "fetch_posts_REQUEST",
  },
  Object {
    "error": "Ops! We have some internal error :)",
    "type": "fetch_posts_FAILURE",
  },
]
`;

exports[`should handle fetch_posts_SUCCESS action 1`] = `
Array [
  Object {
    "type": "fetch_posts_REQUEST",
  },
  Object {
    "data": undefined,
    "type": "fetch_posts_SUCCESS",
  },
]
`;

exports[`should handle fetch_refreshed_posts_FAILURE action 1`] = `
Array [
  Object {
    "type": "fetch_refreshed_posts_REQUEST",
  },
  Object {
    "error": "Ops! We have some internal error :)",
    "type": "fetch_refreshed_posts_FAILURE",
  },
]
`;

exports[`should handle fetch_refreshed_posts_SUCCESS action 1`] = `
Array [
  Object {
    "type": "fetch_refreshed_posts_REQUEST",
  },
  Object {
    "data": undefined,
    "type": "fetch_refreshed_posts_SUCCESS",
  },
]
`;
